fixed header not showing logo and icon

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -17,7 +17,7 @@
     margin: 1vw;
     height: auto;
     background-color:transparent;
-    background-image: urL("./../../../assets/images/icons/sereniumText.svg");
+    background-image: url("./../../assets/images/icons/sereniumText.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -28,7 +28,7 @@
     height: 5.5vh;
     background-color: transparent;
 
-    background-image: url("./../../../assets/images/icons/sideMenuIcon.svg");
+    background-image: url("./../../assets/images/icons/sideMenuIcon.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
